--- a/index.html
+++ b/index.html
@@ -4,12 +4,102 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>FOI</title>
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header class="header">
+      <div class="header__inner">
+        <a href="index.html" class="header__logo-container"
+          ><img src="images/logo.png" class="header__logo" alt="FOI logo"
+        /></a>
+        <nav class="header__nav">
+          <a href="index.html" class="header__nav-item header__nav-item_active">
+            Home
+          </a>
+          <a href="#" class="header__nav-item">Events</a>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section class="section-hero">
+        <div class="section-hero__overlay">
+          <div class="section-hero_content">
+            <h1 class="section-hero__heading">
+              Centar za podršku studentima i razvoj karijera
+            </h1>
+            <p class="section-hero_subheading">
+              CPSRK aktivno radi na poboljšanju kvalitete cjelokupnog iskustva
+              studiranja za studente i studentice FOI-ja na način da ih
+              podržava, motivira i karijerno usmjerava. Svojim aktivnostima
+              pomaže im kako bi se uspješno nosili s akademskim izazovima,
+              napredovali kroz studij i počeli graditi svoju karijeru već
+              tijekom studentskih dana.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="section section-events">
+        <h2 class="section__title">Featured events</h2>
+        <div class="events">
+          <div class="events__event">
+            <figure class="events__event-figure">
+              <img
+                class="events_event-image"
+                src="images/design.jpg"
+                alt="Design"
+              />
+            </figure>
+            <h3 class="events__event-title">UX/UI design workshops</h3>
+            <p class="events_event-description">
+              Learn how to solve big problems and test new ideas based on Google
+              Sprint methodology...
+            </p>
+            <a href="#" class="button">Find out more</a>
+          </div>
+
+          <div class="events__event">
+            <figure class="events__event-figure">
+              <img
+                class="events_event-image"
+                src="images/development.jpg"
+                alt="Development"
+              />
+            </figure>
+            <h3 class="events__event-title">Frontend best practices</h3>
+            <p class="events_event-description">
+              Learn how to solve big problems and test new ideas based on Google
+              Sprint methodology...
+            </p>
+            <a href="#" class="button">Find out more</a>
+          </div>
+
+          <div class="events__event">
+            <figure class="events__event-figure">
+              <img
+                class="events_event-image"
+                src="images/marketing.jpg"
+                alt="Marketing"
+              />
+            </figure>
+            <h3 class="events__event-title">Digital marketing workshop</h3>
+            <p class="events_event-description">
+              Learn how to solve big problems and test new ideas based on Google
+              Sprint methodology...
+            </p>
+            <a href="#" class="button">Find out more</a>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
