--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
           </div>
         </div>
       </section>
+      <footer class="footer">Copyright &copy; 2021. Speck Academy</footer>
     </main>
   </body>
 </html>
