Added events page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a href="index.html" class="header__nav-item header__nav-item_active">
             Home
           </a>
-          <a href="#" class="header__nav-item">Events</a>
+          <a href="events.html" class="header__nav-item">Events</a>
         </nav>
       </div>
     </header>
@@ -100,7 +100,7 @@
           </div>
         </div>
       </section>
-      <footer class="footer">Copyright &copy; 2021. Speck Academy</footer>
     </main>
+    <footer class="footer">Copyright &copy; 2021. Speck Academy</footer>
   </body>
 </html>
