--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="section-hero__overlay">
           <div class="section-hero_content">
             <h1 class="section-hero__heading">
-              Centar za podršku studentima i razvoj karijera
+              Centar za podršku studentima i razvoj karijera na FOI
             </h1>
             <p class="section-hero_subheading">
               CPSRK aktivno radi na poboljšanju kvalitete cjelokupnog iskustva
