--- a/event.html
+++ b/event.html
@@ -31,8 +31,9 @@
       </div>
     </header>
     <main>
-     <h1 class="title">Events</h1>
     </main>
-    <footer class="footer">Copyright &copy; 2021. Speck Academy</footer>
+    <footer class="footer">
+      <div class="footer__text">Copyright &copy; 2021. Speck Academy</div>
+    </footer>
   </body>
 </html>
