Move Events page footer text inside a div element with footer_text class

--- a/events.html
+++ b/events.html
@@ -33,6 +33,8 @@
     <main>
      <h1 class="title">Events</h1>
     </main>
-    <footer class="footer">Copyright &copy; 2021. Speck Academy</footer>
+    <footer class="footer">
+      <div class="footer__text">Copyright &copy; 2021. Speck Academy</div>
+    </footer>
   </body>
 </html>
