--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   <body>
     <header class="header">
       <div class="header__inner">
-        <a href="index.html" class="header__logo-container"
-          ><img src="images/logo.png" class="header__logo" alt="FOI logo"
-        /></a>
+        <a href="index.html" class="header__logo-container">
+          <img src="images/logo.png" class="header__logo" alt="FOI logo"/>
+        </a>
         <nav class="header__nav">
           <a href="index.html" class="header__nav-item header__nav-item_active">
             Home
