Move Events page footer text inside a div element with footer_text class

--- a/index.html
+++ b/index.html
@@ -96,11 +96,13 @@
               Learn how to solve big problems and test new ideas based on Google
               Sprint methodology...
             </p>
-            <a href="#" class="button">Find out more</a>
+            <a href="event.html" class="button">Find out more</a>
           </div>
         </div>
       </section>
     </main>
-    <footer class="footer">Copyright &copy; 2021. Speck Academy</footer>
+    <footer class="footer">
+      <div class="footer__text">Copyright &copy; 2021. Speck Academy</div>
+    </footer>
   </body>
 </html>
