Add event links to events

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               Learn how to solve big problems and test new ideas based on Google
               Sprint methodology...
             </p>
-            <a href="#" class="button">Find out more</a>
+            <a href="event.html" class="button">Find out more</a>
           </div>
 
           <div class="events__event">
@@ -80,7 +80,7 @@
               Learn how to solve big problems and test new ideas based on Google
               Sprint methodology...
             </p>
-            <a href="#" class="button">Find out more</a>
+            <a href="event.html" class="button">Find out more</a>
           </div>
 
           <div class="events__event">
