Add an event card to Event page

--- a/event.html
+++ b/event.html
@@ -16,6 +16,23 @@
     <link rel="stylesheet" href="style.css" />
     <title>FOI</title>
   </head>
+
+  <div class="modal fade show" id="renewalModal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="renewalModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="renewalModalLabel">Renew your membership</h5>
+        </div>
+        <div class="modal-body">
+          You need to renew your membership before you can continue!
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary">Renew</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
   <body>
     <header class="header">
       <div class="header__inner">
@@ -31,6 +48,45 @@
       </div>
     </header>
     <main>
+      <h1 class="title">Event</h1>
+      <section class="section-event">
+        <div class="event-info">
+          <figure class="event-info__figure">
+            <img src="images/design.jpg" alt="UX/UI workshop" class="event-info__image">
+          </figure>
+          <div class="event-info__content">
+            <div class="event-info__content-row">
+              <div class="event-info__item">
+                <h3 class="event-info__item-title">Lokacija</h3>
+                <p class="event-info__item-value">Hodnik FOI-ja</p>
+              </div>
+              <div class="event-info__item">
+               <h3 class="event-info__item-title">Datum i vrijeme</h3>
+               <p class="event-info__item-value">Hodnik FOI-ja</p>
+              </div>
+            </div>
+            <div class="event-info__content-row">
+             <div class="event-info__item">
+               <h3 class="event-info__item-title">Slobodna mjesta</h3>
+               <p class="event-info__item-value">Hodnik FOI-ja</p>
+             </div>
+             <div class="event-info__item">
+              <h3 class="event-info__item-title">Tvrtka</h3>
+              <p class="event-info__item-value">Hodnik FOI-ja</p>
+             </div>
+           </div>
+           <button class="button">Prijavi se</button>
+          </div>
+        </div>
+        <p class="event-info__description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Ad, odit, sed molestias vitae id cum velit quae recusandae consectetur accusantium quod consequatur voluptas. 
+          Minima praesentium sunt suscipit id! In, delectus? 
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Ab vitae totam, magnam voluptatum debitis perspiciatis aspernatur rerum molestiae saepe sed tenetur! 
+          Rem id vitae fuga facilis culpa corrupti incidunt alias.
+        </p>
+      </section> 
     </main>
     <footer class="footer">
       <div class="footer__text">Copyright &copy; 2021. Speck Academy</div>
