Add event cards to Events page

--- a/events.html
+++ b/events.html
@@ -32,57 +32,164 @@
     </header>
     <main>
      <h1 class="title">Events</h1>
-     <section class="section section-events">
-      <div class="events">
-        <div class="events__event">
-          <figure class="events__event-figure">
-            <img
-              class="events_event-image"
-              src="images/design.jpg"
-              alt="Design"
-            />
-          </figure>
-          <h3 class="events__event-title">UX/UI design workshops</h3>
-          <p class="events_event-description">
-            Learn how to solve big problems and test new ideas based on Google
-            Sprint methodology...
-          </p>
-          <a href="event.html" class="button">Find out more</a>
+     <section class="section section_events">
+      <div class="event-card">
+        <h2 class="event-card__title">UX/UI workshop</h2>
+        <div class="event-card__content">
+          <div class="event-card__content-row">
+            <div class="event-card__item">
+              <h3 class="event-card__item-title">Lokacija</h3>
+              <p class="event-card__item-value">Hodnik FOI-ja</p>
+            </div>
+            <div class="event-card__item">
+             <h3 class="event-card__item-title">Datum i vrijeme</h3>
+             <p class="event-card__item-value">Hodnik FOI-ja</p>
+            </div>
+          </div>
+          <div class="event-card__content-row">
+           <div class="event-card__item">
+             <h3 class="event-card__item-title">Slobodna mjesta</h3>
+             <p class="event-card__item-value">Hodnik FOI-ja</p>
+           </div>
+           <div class="event-card__item">
+            <h3 class="event-card__item-title">Tvrtka</h3>
+            <p class="event-card__item-value">Hodnik FOI-ja</p>
+           </div>
+         </div>
         </div>
-
-        <div class="events__event">
-          <figure class="events__event-figure">
-            <img
-              class="events_event-image"
-              src="images/development.jpg"
-              alt="Development"
-            />
-          </figure>
-          <h3 class="events__event-title">Frontend best practices</h3>
-          <p class="events_event-description">
-            Learn how to solve big problems and test new ideas based on Google
-            Sprint methodology...
-          </p>
-          <a href="event.html" class="button">Find out more</a>
-        </div>
-
-        <div class="events__event">
-          <figure class="events__event-figure">
-            <img
-              class="events_event-image"
-              src="images/marketing.jpg"
-              alt="Marketing"
-            />
-          </figure>
-          <h3 class="events__event-title">Digital marketing workshop</h3>
-          <p class="events_event-description">
-            Learn how to solve big problems and test new ideas based on Google
-            Sprint methodology...
-          </p>
-          <a href="event.html" class="button">Find out more</a>
-        </div>
+        <a href="event.html" class="button">Find out more</a>
       </div>
-    </section>
+      <div class="event-card">
+        <h2 class="event-card__title">UX/UI workshop</h2>
+        <div class="event-card__content">
+          <div class="event-card__content-row">
+            <div class="event-card__item">
+              <h3 class="event-card__item-title">Lokacija</h3>
+              <p class="event-card__item-value">Hodnik FOI-ja</p>
+            </div>
+            <div class="event-card__item">
+             <h3 class="event-card__item-title">Datum i vrijeme</h3>
+             <p class="event-card__item-value">Hodnik FOI-ja</p>
+            </div>
+          </div>
+          <div class="event-card__content-row">
+           <div class="event-card__item">
+             <h3 class="event-card__item-title">Slobodna mjesta</h3>
+             <p class="event-card__item-value">Hodnik FOI-ja</p>
+           </div>
+           <div class="event-card__item">
+            <h3 class="event-card__item-title">Tvrtka</h3>
+            <p class="event-card__item-value">Hodnik FOI-ja</p>
+           </div>
+         </div>
+        </div>
+        <a href="event.html" class="button">Find out more</a>
+      </div>
+      <div class="event-card">
+        <h2 class="event-card__title">UX/UI workshop</h2>
+        <div class="event-card__content">
+          <div class="event-card__content-row">
+            <div class="event-card__item">
+              <h3 class="event-card__item-title">Lokacija</h3>
+              <p class="event-card__item-value">Hodnik FOI-ja</p>
+            </div>
+            <div class="event-card__item">
+             <h3 class="event-card__item-title">Datum i vrijeme</h3>
+             <p class="event-card__item-value">Hodnik FOI-ja</p>
+            </div>
+          </div>
+          <div class="event-card__content-row">
+           <div class="event-card__item">
+             <h3 class="event-card__item-title">Slobodna mjesta</h3>
+             <p class="event-card__item-value">Hodnik FOI-ja</p>
+           </div>
+           <div class="event-card__item">
+            <h3 class="event-card__item-title">Tvrtka</h3>
+            <p class="event-card__item-value">Hodnik FOI-ja</p>
+           </div>
+         </div>
+        </div>
+        <a href="event.html" class="button">Find out more</a>
+      </div>
+      <div class="event-card">
+        <h2 class="event-card__title">UX/UI workshop</h2>
+        <div class="event-card__content">
+          <div class="event-card__content-row">
+            <div class="event-card__item">
+              <h3 class="event-card__item-title">Lokacija</h3>
+              <p class="event-card__item-value">Hodnik FOI-ja</p>
+            </div>
+            <div class="event-card__item">
+             <h3 class="event-card__item-title">Datum i vrijeme</h3>
+             <p class="event-card__item-value">Hodnik FOI-ja</p>
+            </div>
+          </div>
+          <div class="event-card__content-row">
+           <div class="event-card__item">
+             <h3 class="event-card__item-title">Slobodna mjesta</h3>
+             <p class="event-card__item-value">Hodnik FOI-ja</p>
+           </div>
+           <div class="event-card__item">
+            <h3 class="event-card__item-title">Tvrtka</h3>
+            <p class="event-card__item-value">Hodnik FOI-ja</p>
+           </div>
+         </div>
+        </div>
+        <a href="event.html" class="button">Find out more</a>
+      </div>
+      <div class="event-card">
+        <h2 class="event-card__title">UX/UI workshop</h2>
+        <div class="event-card__content">
+          <div class="event-card__content-row">
+            <div class="event-card__item">
+              <h3 class="event-card__item-title">Lokacija</h3>
+              <p class="event-card__item-value">Hodnik FOI-ja</p>
+            </div>
+            <div class="event-card__item">
+             <h3 class="event-card__item-title">Datum i vrijeme</h3>
+             <p class="event-card__item-value">Hodnik FOI-ja</p>
+            </div>
+          </div>
+          <div class="event-card__content-row">
+           <div class="event-card__item">
+             <h3 class="event-card__item-title">Slobodna mjesta</h3>
+             <p class="event-card__item-value">Hodnik FOI-ja</p>
+           </div>
+           <div class="event-card__item">
+            <h3 class="event-card__item-title">Tvrtka</h3>
+            <p class="event-card__item-value">Hodnik FOI-ja</p>
+           </div>
+         </div>
+        </div>
+        <a href="event.html" class="button">Find out more</a>
+      </div>
+      <div class="event-card">
+        <h2 class="event-card__title">UX/UI workshop</h2>
+        <div class="event-card__content">
+          <div class="event-card__content-row">
+            <div class="event-card__item">
+              <h3 class="event-card__item-title">Lokacija</h3>
+              <p class="event-card__item-value">Hodnik FOI-ja</p>
+            </div>
+            <div class="event-card__item">
+             <h3 class="event-card__item-title">Datum i vrijeme</h3>
+             <p class="event-card__item-value">Hodnik FOI-ja</p>
+            </div>
+          </div>
+          <div class="event-card__content-row">
+           <div class="event-card__item">
+             <h3 class="event-card__item-title">Slobodna mjesta</h3>
+             <p class="event-card__item-value">Hodnik FOI-ja</p>
+           </div>
+           <div class="event-card__item">
+            <h3 class="event-card__item-title">Tvrtka</h3>
+            <p class="event-card__item-value">Hodnik FOI-ja</p>
+           </div>
+         </div>
+        </div>
+        <a href="event.html" class="button">Find out more</a>
+      </div>
+     </section>
     </main>
     <footer class="footer">
       <div class="footer__text">Copyright &copy; 2021. Speck Academy</div>
